books/projects/rac/tests/yaml_test/data_types/std-tupple-too-big.ref.stderr
std-tupple-too-big.cpp:8 (44-45): syntax error, unexpected ',', expecting '>'
  8 | tuple<int, int, int, int, int, int, int, int, int> foo(int a)
    |                                             ^
